add ago to the submitted/verified time display string

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -9,6 +9,8 @@
 <% end %>
 
 <div id="page-home">
+  <p id="notice"><%= notice %></p>
+
   <section class="header">
     <h1>
       COVID-19 Recovery Help
