--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="/">
       <%= image_tag 'indiabeatscovid.png' %>
-      India Beats Covid
+      We Are With You
     </a>
 <!--    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
 <!--      <span class="navbar-toggler-icon"></span>-->
