--- a/app/views/home/policies.html.erb
+++ b/app/views/home/policies.html.erb
@@ -50,10 +50,13 @@
     <li>
       We do not sell the data to any 3rd party. However it is all publicly available.
     </li>
+    <li>
+      We use google analytics to assess the traffic load on our website. Their privacy policy will be on this link:
+    </li>
   </ul>
 
 
   <p>
-    By using our website you agree to all the terms & conditions and policies mentioned above
+    By using our website you agree to all the terms & conditions and policies mentioned above https://policies.google.com/privacy?hl=en_GB
   </p>
 </div>
