--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,8 @@
   <div class="container d-flex justify-content-around">
     <p>
       <%= link_to "Declaration/Policy", policies_path %>
+      <br/>
+      Website Support & Requests: indiabeatscovid@gmail.com
     </p>
     <p>
       This is an open sourced project. <a href="https://github.com/arpansac/jaocorona" target="_blank">Click Here</a> for the code. Please contribute to make it better.
