--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="google-site-verification" content="9TrgpUtJ_V-kgvq3cATLAsC_mQP3FNin5btOKru4I7w" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
