--- a/app/views/volunteers/new.html.erb
+++ b/app/views/volunteers/new.html.erb
@@ -2,4 +2,13 @@
 <p>
   We are very grateful that you want to take out time and volunteer to help us out. Once you fill this form, we will get back to you as soon as we need help. Till then please keep referring this website to more people who need help.
 </p>
+<p>Duties of Volunteers</p>
+<ul>
+  <li>
+    You will get access to updating the status of details submitted by other people, mark it as unavailable, or validate and mark as verified.
+  </li>
+  <li>
+    Get more contacts which are active
+  </li>
+</ul>
 <%= render 'form', volunteer: @volunteer %>
