--- a/app/views/hospital_beds/index.html.erb
+++ b/app/views/hospital_beds/index.html.erb
@@ -19,7 +19,7 @@
 
     <h4>
       <%= link_to 'Click Here', new_hospital_bed_path, class: 'btn btn-lg btn-primary' %>
-      to share any information about available hospital beds. Our team will re-verify it too.
+      to share any information about available hospital beds.
     </h4>
   </div>
 
@@ -123,7 +123,7 @@
 
   <h6>
     <%= link_to 'Click Here', new_hospital_bed_path, class: 'btn btn-primary btn-md' %>
-    to share any information about available hospital beds. Our team will re-verify it too.
+    to share any information about available hospital beds.
   </h6>
 
 </div>
