--- a/app/views/plasma_donors/index.html.erb
+++ b/app/views/plasma_donors/index.html.erb
@@ -19,7 +19,7 @@
 
     <h4>
       <%= link_to 'Click Here', new_plasma_donor_path, class: 'btn btn-lg btn-primary' %>
-      share your own or any other Plasma Donor's information. Our team will re-verify it too.
+      share your own or any other Plasma Donor's information.
     </h4>
   </div>
 
@@ -119,7 +119,7 @@
 
     <h6>
       <%= link_to 'Click Here', new_plasma_donor_path, class: 'btn btn-lg btn-primary' %>
-      share your own or any other Plasma Donor's information. Our team will re-verify it too.
+      share your own or any other Plasma Donor's information.
     </h6>
   </div>
 
