update text on home page buttons

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -95,7 +95,7 @@
     <% end %>
 
     <%= button_to new_medicine_path, class: 'btn btn-info', method: :get do %>
-      Add Medicine Supplier Contact
+      Add Medicine/Injection Supplier Contact
     <% end %>
   </section>
 
