--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :address, 'Address (optional)', class: 'form-label' %>
-    <%= form.text_field :address, class: 'form-control', class: 'form-control' %>
+    <%= form.text_field :address, class: 'form-control' %>
   </div>
 
 
