--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -13,7 +13,7 @@
 
   <section class="header">
     <h1>
-      COVID-19 Recovery Help
+      COVID-19 Verified Contacts
     </h1>
     <h4>
       This is an effort to bring together and verify all the contacts of the needed resources for people fighting COVID-19 in our country India.
@@ -110,7 +110,8 @@
 
   <section class="external-links">
 
-    <h3>Links to more COVID resources by City</h3>
+    <h3>Links to more COVID resources by C:wq
+      ity</h3>
     <p>This is all the data available according to each city which people are sharing on different WhatsApp groups, Twitter and other social media apps.</p>
 
     <% if user_signed_in? %>
