--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -110,7 +110,7 @@
 
   <section class="external-links">
 
-    <h3>Links to more COVID resources by C:wq
+    <h3>Links to more COVID resources by City
       ity</h3>
     <p>This is all the data available according to each city which people are sharing on different WhatsApp groups, Twitter and other social media apps.</p>
 
