add ambulance to medicines

--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -59,7 +59,7 @@
     <% end %>
 
     <%= button_to medicines_path, class: 'btn btn-outline-primary btn-lg', method: :get do %>
-       COVID Medicine Suppliers
+       COVID Medicine / Ambulance
       <br/>
       <small>
         Total: <%= @medicines[0] %>
@@ -84,7 +84,7 @@
     <% end %>
 
     <%= button_to new_medicine_path, class: 'btn btn-info', method: :get do %>
-      Add Medicine/Injection Supplier Contact
+      Add Medicine/Ambulance Contact
     <% end %>
   </section>
 
