add ambulance to meta

--- a/app/views/medicines/index.html.erb
+++ b/app/views/medicines/index.html.erb
@@ -1,20 +1,20 @@
 <% content_for :meta do %>
   <title>
-    COVID-19 Meds/Injection Supplier List
+    COVID-19 Meds/Injection Supplier / Ambulance List
   </title>
-  <meta name="og:title" content="COVID-19 Meds/Injection Supplier List">
-  <meta name="description" content="List of COVID-19 Meds/Injection Supplier">
-  <meta name="twitter:title" content="COVID-19 Meds/Injection Supplier List">
-  <meta name="twitter:description" content="List of COVID-19 Meds/Injection Supplier">
+  <meta name="og:title" content="COVID-19 Meds/Injection Supplier / Ambulance List">
+  <meta name="description" content="List of COVID-19 Meds/Injection / Ambulance Supplier">
+  <meta name="twitter:title" content="COVID-19 Meds/Injection Supplier / Ambulance List">
+  <meta name="twitter:description" content="List of COVID-19 Meds/Injection / Ambulance Supplier">
 <% end %>
 
 
 <div id="page-medicine-suppliers-index">
   <p id="notice"><%= notice %></p>
 
-  <h1>COVID-19 Meds/Injection Supplier List</h1>
+  <h1>COVID-19 Meds/Injection / Ambulance Supplier List</h1>
   <p>
-    COVID-19 Meds/Injection Supplier List
+    COVID-19 Meds/Injection Supplier / Ambulance List
   </p>
 
   <div>
