--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -1,16 +1,16 @@
 <% content_for :meta do %>
   <title>
-    Add a COVID-19 Meds/Injection supplier
+    Add a COVID-19 Meds/Injection supplier / Ambulance Contact
   </title>
-  <meta name="og:title" content="Add a COVID-19 Meds/Injection supplier">
+  <meta name="og:title" content="Add a COVID-19 Meds/Injection supplier / Ambulance Contact">
   <meta name="description" content="Fill this form to add the contact of a COVID-19 Medicine/Injections supplier">
-  <meta name="twitter:title" content="Add a COVID-19 Meds/Injection supplier">
+  <meta name="twitter:title" content="Add a COVID-19 Meds/Injection supplier / Ambulance Contact">
   <meta name="twitter:description" content="Fill this form to add the contact of a COVID-19 Medicine/Injections supplier">
 <% end %>
 
 <div class="page-new-medicine">
   <h1>
-    Add a COVID-19 Meds/Injection supplier
+    Add a COVID-19 Meds/Injection supplier / Ambulance Contact
   </h1>
   <p>
     Fill this form to add the contact of a COVID-19 Medicine/Injections supplier
